Closed Bug 724976 Opened 14 years ago Closed 14 years ago

IonMonkey: Assertion failure: thisArg->useCount() == 0, at ion/IonBuilder.cpp:2202

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86_64
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Assigned: nbp)

References

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

The following testcase asserts on ionmonkey revision c34398f961e7 (run with --ion -n), tested on 64 bit: function g() {} for(var i = 0; "0 == 0"; i++) { g(0 || 1); }
The fix should reuse the logic of IonBuilder::discardCallArgs (MCallOptimize). I recently worked on it, so I take.
Assignee: general → nicolas.b.pierron
Status: NEW → ASSIGNED
Share discardCallArgs function between Inlining and Native function substitution.
Attachment #597625 - Flags: review?(christopher.leary)
Attachment #597625 - Flags: review?(christopher.leary) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/ion/bug724976.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: