Accept Arguments to be saved by resume points. (Bug 724976, r=cdleary)

Share discardCallArgs function between Inlining and Native function substitution.